# pipeline_func

./: CHANGELOG.md  LICENSE.txt  README.md  README.rst  pipeline_func.py  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: Makefile  basic_usage.rst  conf.py
tests/: test_pipeline.py
